[project]
name = "ui-homepage"
version = "0.1.0"
description = "Homepage for the ElasticDT microk8s cluster"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "dash-bootstrap-components~=1.6.0",
    "dash-compose>=2023.3.12",
    "fastapi[standard]~=0.115",
    "gunicorn~=23.0.0",
    "pydantic-settings~=2.5.2",
    "pymysql[rsa]~=1.1.1",
    "sqlmodel~=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "isort>=5.13.2",
    "pylint>=3.3.1",
]
